# qwen36-harness

./: .gitignore  README.md  pyproject.toml  requirements-frozen.txt
configs/: endpoints.toml  mcp_servers.toml
docs/: architecture.md  debug_phase8.md  history_plan.md
docs/plans/: 2026-04-28-cron-webui.md  2026-04-28-qwen36-harness.md  2026-04-29-phase-2.5-mcp.md  2026-04-29-phase-5-subagents.md  2026-04-29-phase-6-web-code-tools.md
src/harness/: __init__.py  agent.py  cli.py  client.py  config.py  mcp.py  storage.py  web.py
src/harness/static/: index.html
src/harness/tools/: __init__.py  calc.py  cerebro.py  code_exec.py  cron.py  filesystem.py  subagent.py  system_prompt.md  vast_manager.py  web_search.py
tests/: test_agent.py  test_client.py  test_code_exec.py  test_config.py  test_mcp.py  test_mcp_cerebro.py  test_smoke_agent.py  test_smoke_endpoint.py  test_smoke_mcp.py  test_smoke_mcp_agent.py  test_subagent.py  test_tools_fs_calc.py  test_tools_registry.py  test_web.py  test_web_search.py
tools/: vast_tunnel.sh
