[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "qwen36-harness"
version = "0.0.1"
description = "Personal agentic harness around a private Qwen3.6 endpoint."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "Andre", email = "buckmazzta@gmail.com" }]

dependencies = [
    "httpx>=0.27",
    "rich>=13.7",
    "aiohttp>=3.9",
    "mcp>=1.0",
    "fastapi>=0.110",
    "uvicorn>=0.30",
    "sse-starlette>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.5",
]

[project.scripts]
harness = "harness.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["E501"]
